修改一些引用规范问题

--- a/demo/css/jkef.css
+++ b/demo/css/jkef.css
@@ -302,7 +302,7 @@ i{
     background-position: -2px -66px;
 }
 .ui-more-drop-1-arrow{
-    background: url("img/12.png") no-repeat;
+    background: url("../img/12.png") no-repeat;
 }
 
 
